grammar.js
    source_file: $ => seq(repeat($._use_or_import), repeat($._declaration)),

    // ---------------------------------------------------------------------
    // Lexical layer
    // ---------------------------------------------------------------------

    // The lexer classifies a name by its first letter, after an optional
    // leading `_`. A `$` prefix escapes a keyword and is dropped from the
    // token text by the reference lexer; here it stays part of the token.
    name_lower: _ => /(\$[a-zA-Z]|_?[a-z])[a-zA-Z0-9_!$]*/,
    name_upper: _ => /_?[A-Z][a-zA-Z0-9_!$]*/,
    // Mathematical operators block; used for names like `⊆`.
    wildcard: _ => '_',

    // A user-defined operator: two or more characters from the operator set, or
    // a single `_` followed by one or more of them (`_>==>`), which the lexer
    // folds into the operator token. No explicit precedence:
    // tree-sitter weighs explicit precedence before match length, so demoting
    // this would make `>>` lex as two `>` tokens. Length alone lets it beat the
    // single-character operators, and at equal length the reserved spellings
    // win because a string literal is more specific than a pattern.
    hole_anonymous: _ => '???',
    integer: _ =>
      token(
        choice(
          /0x[0-9a-fA-F]+(_[0-9a-fA-F]+)*(i8|i16|i32|i64|ii)?/,
          /[0-9]+(_[0-9]+)*(i8|i16|i32|i64|ii)?/,
        ),
      ),
    qualified_name: $ =>
      seq(
        repeat(seq($._qualified_segment, $._dot)),
        choice($._qualified_segment, $.name_lower),
        // Either dot: the scanner classifies `Foo.` at end of line as DOT_SPACED, because what
        // follows the dot is whitespace. The reference does not care -- nameAllowQualified closes a
        // TrailingDot for a dot with no name after it either way.
        optional(alias(choice($._dot, $._dot_spaced), $.trailing_dot)),
      ),
    _qualified_segment: $ => choice($.name_upper, $.name_math),

    // Java names are the exception: `nameAllowQualified` is called with an
    // empty tail set for them, so `java.util.Arrays` never stops early.
    _use_or_import: $ => seq(choice($.use_declaration, $.import_declaration), optional(';')),

    _declaration: $ =>
      choice(
        $.module_declaration,
        $.function_declaration,
        $.enum_declaration,
        $.struct_declaration,
        $.trait_declaration,
        $.instance_declaration,
        $.effect_declaration,
        $.type_alias_declaration,
      ),

    function_declaration: $ =>
      seq(
        ...prologue($),
        choice('def', 'redef'),
        field('name', functionName($)),
        optional($.type_parameter_list),
        field('parameters', $.parameter_list),
        ':',
        $._type_and_effect,
        optional($.trait_constraints),
        optional($.equality_constraints),
        '=',
        field('body', $._statement),
      ),

    // A trait signature is a `def` whose body may be omitted.
    parameter_list: $ => seq('(', commaSep($.parameter), ')'),
    _type_name: $ => choice($.name_upper, $.static_type),
    _type_and_effect: $ => prec.right(seq($._type, optional($.effect_annotation))),
    type_reference: $ => seq($._type_name, repeat(seq($._dot, $._type_name))),

    _type: $ =>
      choice(
        $.type_reference,
        // A leaf, like the reference's Type.Variable, which holds the name as a token rather than
        // as a child node. Aliasing the three name rules here rather than wrapping them in a
        // `type_variable` rule is what keeps it a leaf: a wrapper would give the node one named
        // child where the reference has none, and every type variable would diverge on arity.
        alias(choice($.name_lower, $.name_math, $.wildcard), $.type_variable),
        $.type_constant,
        $.tuple_type,
        $.record_row_type,
        $.record_type,
        $.effect_set_type,
        $.schema_type,
        $.schema_row_type,
        $.extensible_type,
        $.case_set_type,
        $.type_application,
        $.unary_type,
        $.binary_type,
      ),

    schema_type: $ => seq('#{', commaSep($.schema_term), optional(seq('|', $._type)), '}'),
    schema_term: $ =>
      seq(
        $.qualified_name,
        optional(
          choice($.type_argument_list, seq('(', commaSep($._type), optional(seq(';', $._type)), ')')),
        ),
      ),

    _pattern: $ =>
      choice(
        $.variable_pattern,
        $.literal_pattern,
        $.tag_pattern,
        $.tuple_pattern,
        $.record_pattern,
        $.unary_pattern,
        $.cons_pattern,
      ),

    variable_pattern: $ => choice($.name_lower, $.name_math, $.wildcard),
    _statement: $ => choice($._expression, $.sequence_expression),
    sequence_expression: $ => prec.right(PREC.sequence, seq($._expression, ';', $._statement)),

    _expression: $ =>
      choice(
        $._literal,
        $.debug_interpolation,
        $.qualified_name,
        $.wildcard,
        $.intrinsic,
        $.hole_anonymous,
        $.hole_named,
        $.hole_variable,
        $.static_expression,
        $.unit_expression,
        $.paren_expression,
        $.tuple_expression,
        $.ascribe_expression,
        $.operator_lambda,
        $.lambda,
        $.block,
        $.record_expression,
        $.let_expression,
        $.local_def_expression,
        $.region_expression,
        $.if_expression,
        $.match_expression,
        $.match_lambda,
        $.ext_match_expression,
        $.ext_match_lambda,
        $.restrictable_choose,
        $.ext_tag_expression,
        $.open_variant_expression,
        $.foreach_expression,
        $.for_monadic_expression,
        $.for_applicative_expression,
        $.array_literal,
        $.vector_literal,
        $.list_literal,
        $.set_literal,
        $.map_literal,
        $.checked_cast,
        $.unchecked_cast,
        $.unsafe_expression,
        $.run_expression,
        $.handler_expression,
        $.try_expression,
        $.throw_expression,
        $.new_expression,
        $.invoke_constructor,
        $.super_expression,
        $.spawn_expression,
        $.par_yield_expression,
        $.select_expression,
        $.use_expression,
        $.fixpoint_constraint_set,
        $.fixpoint_solve,
        $.fixpoint_psolve,
        $.unterminated_literal,
        $.unterminated_string,
        $.fixpoint_inject,
        $.fixpoint_query,
        $.fixpoint_query_with_provenance,
        $.fixpoint_lambda,
        $.apply_expression,
        $.invoke_method,
        $.get_field,
        $.record_select,
        $.struct_get,
        $.struct_put,
        $.index_expression,
        $.index_assign_expression,
        $.unary_expression,
        $.binary_expression,
      ),

    paren_expression: $ => seq('(', $._expression, ')'),
    // Tuple elements may be named: `(x = 1, y = 2)`.
    tuple_expression: $ => seq('(', commaSep1($.argument), ')'),
    block: $ => seq('{', $._statement, '}'),

    let_expression: $ =>
      prec.right(
        seq('let', $._pattern, optional(seq(':', $._type)), '=', field('body', $._statement)),
      ),

    fixpoint_constraint_set: $ => seq('#{', repeat($.fixpoint_constraint), '}'),
    fixpoint_constraint: $ =>
      seq($.predicate_head, optional(seq(':-', commaSep1($._predicate_body))), $._dot_spaced),
    predicate_head: $ => prec.right(seq($.name_upper, optional($.head_term_list))),
    head_term_list: $ =>
      seq('(', commaSep($._expression), optional(seq(';', $._expression)), ')'),
    _predicate_body: $ => choice($.predicate_guard, $.predicate_functional, $.predicate_atom),
    predicate_guard: $ => seq('if', '(', $._expression, ')'),
    predicate_functional: $ =>
      seq('let', choice(variableName($), seq('(', commaSep(variableName($)), ')')), '=', $._expression),
    // `not` and `fix` are recorded as fields: without them a negated atom and a
    // positive one produce identical named-node trees, and in Datalog that
    // inverts the meaning of the rule.
    predicate_atom: $ =>
      prec.right(
        seq(
          optional(field('negated', 'not')),
          optional(field('fixed', 'fix')),
          $.name_upper,
          optional($.body_term_list),
        ),
      ),
    body_term_list: $ => seq('(', commaSep($._pattern), optional(seq(';', $._pattern)), ')'),

    // Every fixpoint keyword takes the same greedy comma-separated expression
    // list. Sharing one hidden rule keeps the parse tables far smaller than
    // repeating `commaSep1($._expression)` at each site would.
    _fixpoint_expressions: $ => prec.right(commaSep1($._expression)),

    fixpoint_solve: $ =>
      prec.right(
        seq(
          'solve',
          $._fixpoint_expressions,
          optional(seq('project', commaSep1($.name_upper))),
        ),
      ),
    fixpoint_psolve: $ => prec.right(seq('psolve', $._fixpoint_expressions)),
    // The trailing predicate list is greedy: a `,` after it continues the list
    // rather than closing the enclosing argument list.
    fixpoint_inject: $ =>
      prec.right(seq('inject', $._fixpoint_expressions, 'into', commaSep1($.predicate_arity))),
    predicate_arity: $ => seq($.name_upper, '/', $.integer),

    // `Parser2` takes the three clauses in a fixed order, each optional. Three
    // chained optionals after a greedy expression list is by far the most
    // expensive shape in this grammar to build tables for, so accept them as a
    // repeated choice instead: a strict superset that generates in a fraction
    // of the time, and clause order is a semantic check anyway.
    fixpoint_query: $ =>
      prec.right(seq('query', $._fixpoint_expressions, repeat($._fixpoint_query_clause))),
    _fixpoint_query_clause: $ => choice($.fixpoint_select, $.fixpoint_from, $.fixpoint_where),
    // `Parser2` splits the select clause three ways on lookahead — `()`, a
    // parenthesised term list, or a bare expression. A plain expression already
    // covers all three (`()` is the unit expression, `(x, y)` a tuple), and
    // spelling the list form out separately only adds an ambiguity with tuples.
    fixpoint_select: $ => prec.right(seq('select', $._expression)),
    fixpoint_from: $ => prec.right(seq('from', commaSep1($.predicate_atom))),
    fixpoint_where: $ => prec.right(seq('where', $._expression)),
    fixpoint_query_with_provenance: $ =>
      seq(
        'pquery',
        $._fixpoint_expressions,
        'select',
        $.predicate_head,
        'with',
        '{',
        commaSep($.name_upper),
        '}',
      ),

    fixpoint_lambda: $ =>
      seq('#(', commaSep($.predicate_param), ')', $._arrow_spaced, $._expression),
    predicate_param: $ =>
      seq($.name_upper, optional(seq('(', commaSep($._type), optional(seq(';', $._type)), ')'))),

    // --- postfix chain (left-associative, tighter than any operator) ---

    argument_list: $ => seq('(', commaSep($.argument), ')'),
    argument: $ => seq($._expression, optional(seq('=', $._expression))),

    apply_expression: $ => prec.left(PREC.postfix, seq($._expression, $.argument_list)),
    // Outranks `apply_expression(get_field(...))`, which matches the same tokens.
    binary_expression: $ =>
      choice(
        prec.right(
          PREC.cons,
          seq($._expression, field('operator', alias(choice('::', ':::'), $.operator)), $._expression),
        ),
        prec.left(
          PREC.infix_function,
          seq($._expression, '`', $.qualified_name, '`', $._expression),
        ),
        ...[
          [PREC.instanceof, 'instanceof'],
          [PREC.or, 'or'],
          [PREC.and, 'and'],
          [PREC.equality, choice('==', '<=>', '!=')],
          [PREC.comparison, choice('<', '>', '<=', '>=')],
          [PREC.additive, choice('+', '-')],
          [PREC.multiplicative, choice('*', '/')],
          [PREC.angled_plus, '<+>'],
          [PREC.user_operator, choice($.generic_operator, $.name_math)],
        ].map(([p, op]) =>
          prec.left(
            /** @type {number} */ (p),
            seq(
              $._expression,
              field('operator', alias(/** @type {RuleOrLiteral} */ (op), $.operator)),
              $._expression,
            ),
          ),
        ),
      ),
  },
});
